<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="com.apandroid.colorwheelapp.binding.converters.ConvertersKt"/>
        <import type="com.apandroid.colorwheel.gradientseekbar.GradientSeekBarKt"/>
        <import type="com.apandroid.colorwheelapp.utils.ColorUtilsKt"/>

        <variable
            name="viewModel"
            type="com.apandroid.colorwheelapp.gradientseekbartest.TestGradientSeekBarViewModel" />

        <variable
            name="random"
            type="java.util.Random" />

    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/barSizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar_size"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/barSizeEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:maxLength="2"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:hint="@string/zero"
                android:onTextChanged="@{(text, start, end, count) -> viewModel.onBarSizeTextChanged(text)}"
                app:layout_constraintBaseline_toBaselineOf="@id/barSizeText"
                app:layout_constraintStart_toEndOf="@id/textViewBarrier" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBaseline_toBaselineOf="@id/barSizeEdit"
                app:layout_constraintStart_toEndOf="@id/barSizeEdit" />

            <View
                android:id="@+id/barSizeDivider"
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/barSizeEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/cornerRadiusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corner_radius"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/barSizeDivider"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/cornerRadiusEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:maxLength="2"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:hint="@string/zero"
                android:onTextChanged="@{(text, start, end, count) -> viewModel.onCornerRadiusTextChanged(text)}"
                app:layout_constraintBaseline_toBaselineOf="@id/cornerRadiusText"
                app:layout_constraintStart_toEndOf="@id/textViewBarrier" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp"
                android:layout_marginStart="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/cornerRadiusEdit"
                app:layout_constraintBaseline_toBaselineOf="@id/cornerRadiusEdit" />

            <View
                android:id="@+id/cornerRadiusDivider"
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/cornerRadiusEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/thumbRadiusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thumb_radius_text"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cornerRadiusDivider" />

            <EditText
                android:id="@+id/thumbRadiusEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:maxLength="2"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:onTextChanged="@{(text, start, end, count) -> viewModel.onThumbRadiusTextChanged(text)}"
                android:hint="@string/zero"
                app:layout_constraintBaseline_toBaselineOf="@id/thumbRadiusText"
                app:layout_constraintStart_toEndOf="@id/textViewBarrier" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dp"
                android:layout_marginStart="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/thumbRadiusEdit"
                app:layout_constraintBaseline_toBaselineOf="@id/thumbRadiusEdit" />

            <View
                android:id="@+id/thumbRadiusDivider"
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/thumbRadiusEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/textViewBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="barSizeText,cornerRadiusText,thumbRadiusText"/>

            <TextView
                android:id="@+id/colorCircleScale"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:text="@{@string/color_circle_scale_with_value(viewModel.colorCircleScaleObservable)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thumbRadiusDivider"
                tools:text="Color Circle Scale - 0.7"/>

            <SeekBar
                android:id="@+id/colorCircleScaleSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="@={ConvertersKt.convertFloatRatioToProgress(colorCircleScaleSeekBar.getMax(), viewModel.colorCircleScaleObservable)}"
                app:layout_constraintTop_toBottomOf="@id/colorCircleScale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/alphaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@{@string/offset_with_value(viewModel.offsetObservable)}"
                tools:text="Offset - 1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/colorCircleScaleSeekBar" />

            <SeekBar
                android:id="@+id/offsetSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="@={ConvertersKt.convertFloatRatioToProgress(offsetSeekBar.getMax(), viewModel.offsetObservable)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alphaText"/>

            <View
                android:id="@+id/alphaDivider"
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/offsetSeekBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <RadioGroup
                android:id="@+id/orientationRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onCheckedChanged="@{(view, id) -> viewModel.onOrientationRadioChanged(id)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alphaDivider"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/verticalOrientationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vertical"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/horizontalOrientationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/horizontal" />

            </RadioGroup>

            <View
                android:id="@+id/orientationDivider"
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/orientationRadioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/randomizeRgbButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/randomize_rgb"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> GradientSeekBarKt.setTransparentToColor(gradientSeekBar, ColorUtilsKt.randomArgb(random), false)}"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orientationDivider"
                app:layout_constraintEnd_toStartOf="@id/randomizeArgbButton"/>

            <Button
                android:id="@+id/randomizeArgbButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/randomize_argb"
                android:onClick="@{() -> GradientSeekBarKt.setTransparentToColor(gradientSeekBar, ColorUtilsKt.randomArgb(random), true)}"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/randomizeRgbButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/randomizeRgbButton"
                app:layout_constraintBottom_toBottomOf="@id/randomizeRgbButton"/>

            <Button
                android:id="@+id/randomizeStartColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/randomize_start_rgb"
                android:onClick="@{() -> gradientSeekBar.setStartColor(ColorUtilsKt.randomArgb(random))}"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/randomizeRgbButton"
                app:layout_constraintEnd_toStartOf="@id/randomizeArgbButton"/>

            <Button
                android:id="@+id/randomizeEndColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/randomize_end_rgb"
                android:onClick="@{() -> gradientSeekBar.setEndColor(ColorUtilsKt.randomArgb(random))}"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/randomizeRgbButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/randomizeStartColor"
                app:layout_constraintBottom_toBottomOf="@id/randomizeStartColor"/>

            <Button
                android:id="@+id/randomizeThumbColorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rnd_thumb_color"
                android:onClick="@{() -> gradientSeekBar.setThumbColor(ColorUtilsKt.randomArgb(random))}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/randomizeStartColor"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/randomizeThumbStrokeColorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rnd_thumb_stroke_color"
                android:onClick="@{() -> gradientSeekBar.setThumbStrokeColor(ColorUtilsKt.randomArgb(random))}"
                app:layout_constraintStart_toEndOf="@id/randomizeThumbColorButton"
                app:layout_constraintTop_toBottomOf="@id/randomizeThumbColorButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/randomDivider"
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/randomizeThumbStrokeColorButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.apandroid.colorwheel.gradientseekbar.GradientSeekBar
                android:id="@+id/gradientSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:padding="1dp"
                offset="@={viewModel.offsetObservable}"
                app:barSize="@{viewModel.barSizeObservable}"
                app:cornersRadius="@{viewModel.cornerRadiusObservable}"
                app:thumbColorCircleScale="@{viewModel.colorCircleScaleObservable}"
                app:thumbRadius="@{viewModel.thumbRadiusObservable}"
                app:orientation="@{viewModel.gradientSeekBarOrientation}"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/randomDivider"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
